# legal-paraphrase-mining

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml
src/: config.py  data_loader.py  dense_embedder.py  embedder.py  inverted_index.py  keyword_extractor.py  keyword_translator.py  legal_entities.py  logging_utils.py  model2vec_embedder.py  models.py  neural_translator.py  scorer.py  synonym_expander.py  synthetic_pair_creation.py  tiny_test.py
src/candidate_retrieval/: __init__.py  clustering.py  cross_lingual.py  dense_ann.py  pairwise.py  sparse_ann.py  two_stage.py
src/stopwords/: EU_legal_EN.csv  SW-DE-RS_v1-0-0.csv
tests/: test_legal_entities.py
